# SmiledMCP

./: .gitmodules
chemistry-mcp-server/: README.md  helpers.py  pyproject.toml  server.py
chemistry-mcp-server/tests/: test_bugs.py  test_clinical_evidence.py  test_server.py
chemistry-mcp-server/tools/: __init__.py  chembl.py  clinical_evidence.py  conversion.py  equations.py  kegg.py  properties.py  pubchem.py  structure.py  uniprot.py  visualization.py
