[project]
name = "chemistry-mcp-server"
version = "1.0.0"
description = "Unified chemistry MCP server — PubChem search, RDKit analysis, equation balancing, format conversion"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "rdkit>=2024.3.1",
    "pubchempy>=1.0.5",
    "chempy>=0.9.0",
    "pillow>=10.0.0",
]

[project.scripts]
chemistry-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
