[project]
name = "chemistry-mcp-server"
version = "2.0.0"
description = "Unified chemistry & biology MCP server — PubChem, ChEMBL, UniProt, KEGG, RDKit, equation balancing"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "rdkit>=2024.3.1",
    "pubchempy>=1.0.5",
    "chempy>=0.9.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
chemistry-mcp-server = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
